syntax = "proto3";

package auth;

option go_package = "/pkg/api;movies_proto";

service Auth {
    rpc Login (AuthRequest) returns (AuthResponse) {}
    rpc Register (RegisterRequest) returns (EmptyResponse) {}
    rpc GetPublicKey(EmptyRequest) returns (PublicKey) {}
    rpc PingConnect (EmptyRequest) returns (EmptyResponse) {}
}

message AuthRequest {
    string  email = 1;
    string  password = 2;
}

message AuthResponse {
    string jwt = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message PublicKey {
    string key = 1;
}

message EmptyRequest {}
message EmptyResponse {}

